# chai

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.ps1  cacao.ps1  go.work
backend/: CMakeLists.txt
backend/src/: fibdemo.cpp
bootstrap/: CMakeLists.txt  chai.py  chaic.py  compiler.py  depm.py  go.mod  go.sum  linker.py  main.go  requirements.txt  source.py  util.py
bootstrap/ast/: ast.go  block.go  def.go  expr.go  stmt.go
bootstrap/chai/: __init__.py  ast.py  compile.py  lexer.py  mod_loader.py  parser.py  report.py  source.py  symbol.py  types.py
bootstrap/cmd/: analysis.go  args.go  codegen.go  compiler.go  driver.go  execute.go  import.go  link.go  prelude.go  profile.go
bootstrap/codegen/: __init__.py  base_builder.py  dbg_builder.py  debug_info.py  generate_block.go  generate_def.go  generate_expr.go  generate_stmt.go  generator.go  lowerer.py  predicate.py  type_util.py
bootstrap/common/: globals.go  operator.go  spaces.go  symbol.go
bootstrap/depm/: __init__.py  imports.go  infinite.go  load_mod.go  oper_conflicts.go  operator.go  resolve.go  resolver.go  resolver.py  source.go  source.py  symbol.go  symbol_table.go  universe.go  util.go
bootstrap/generate/: __init__.py  conv_type.go  gen_block.go  gen_control.go  gen_defs.go  gen_expr.go  gen_import.go  gen_util.go  generator.go  predicate.py  start_builder.go  type_util.py
bootstrap/ir/: block.go  builder.go  bundle.go  funcdef.go  globals.go  types.go  value.go
bootstrap/llc/: cgo_config.go  common.go  module.go  target.go
bootstrap/llvm/: __init__.py  attr.go  builder.go  builder.py  cgo_config.go  common.go  context.py  core.py  debug.go  debug.py  func.py  ir.go  ir.py  metadata.go  metadata.py  module.go  module.py  target.go  target.py  types.go  types.py  value.go  value.py
bootstrap/lower/: lower_block.go  lower_common.go  lower_def.go  lower_expr.go  lower_stmt.go  lowerer.go  visit.go
bootstrap/mir/: block.go  bundle.go  def.go  expr.go  lower_def.go  lower_expr.go  lowerer.go  mir_block.go  mir_bundle.go  mir_def.go  mir_expr.go  mir_instr.go  mir_stmt.go  mir_value.go  print_mir.go  stmt.go  value.go
bootstrap/report/: __init__.py  api.go  display.go  errors.go  message.go  position.go  reporter.go  reporter.py
bootstrap/resolve/: imports.go  resolver.go
bootstrap/src/: analyze.cpp  args.cpp  ast.hpp  chaic.hpp  compiler.hpp  main.cpp  report.cpp  report.hpp  types.hpp
bootstrap/src/resolve/: symbol_table.cpp
bootstrap/src/syntax/: lexer.cpp  lexer.hpp  parse_common.cpp  parse_top.cpp  parser.cpp  parser.hpp  token.hpp
bootstrap/src/types/: type_eq.cpp  type_repr.cpp  type_store.cpp  type_store.hpp
bootstrap/syntax/: __init__.py  ast.py  lexer.go  lexer.py  parse_block.go  parse_common.go  parse_def.go  parse_expr.go  parse_funcdef.go  parse_import.go  parse_stmt.go  parse_top.go  parse_typedef.go  parser.go  parser.py  token.go  token.py
bootstrap/typecheck/: __init__.py  solver.py  walker.py
bootstrap/types/: __init__.py  builtins.go  cast.go  inspect.go  property.go  simplify.go  solution_graph.go  solver.go  substitution.go  traceback.go  types.go  typevar.go  unify.go  untyped.go
bootstrap/typing/: asserts.go  compare.go  fields.go  overloads.go  solver.go  types.go  util.go
bootstrap/util/: constants.go  slice_funcs.go
bootstrap/walk/: oper_check.go  oper_overloads.go  operators.go  type_check.go  type_util.go  walk_block.go  walk_control.go  walk_def.go  walk_expr.go  walk_lit.go  walk_stmt.go  walker.go
bootstrap/wintool/: arch_names.go  cmd_builder.go  find_vs_instance.go  win_sdks.go  wintool.go
compiler/: CMakeLists.txt  Cargo.toml  build.bat
compiler/legacy/: CMakeLists.txt
compiler/src/: compile.c  compile.h  constants.h  main.c  main.rs  util.h
compiler/src/depm/: hash.h  mod_load.c  pkg_map.c  source.c  source.h
compiler/src/report/: display.rs  mod.rs  report.c  report.h
compiler/src/syntax/: grammar.c  lexer.c  lexer.h  lexer.rs  mod.rs  parser.c  parser.h  token.h  token.rs
compiler/stage0i/: chai-frontend.cabal
compiler/stage0i/app/: Main.hs
compiler/stage0i/app/Report/: Message.hs
compiler/stage0i/app/Semantic/: Types.hs
compiler/stage0i/app/Syntax/: AST.hs  Internal.hs  Lexer.hs  Parser.hs
config/: grammar.ebnf  grammar.ptable
docs/: README.md  compiler-layout.md  module_schema.md  shift-reduce-conflicts.md  type_solver.md
docs/Chai Notes/: C Bindings.md  Chai Documentation Scheme.md  Compiler UI.md  IO Model.md  Miscellaneous Notes.md  Modular Import Resolution.md  Selling Points.md  Standard IO.md  Standard Packages.md  The Prelude.md
docs/guide/: basics.md  chapter1.md  chapter2.md  chapter3.md  while_loops.md
docs/quickstart/: intro.md  lesson1.md
docs/tutorial/: 01_intro.md  02_basics.md  03_control_flow.md  04_functions.md
frontend/: chai-frontend.cabal
frontend/app/Parse/: Lexer.hs
frontend/app/Report/: Message.hs
frontend/app/Semantic/: Types.hs
frontend/app/Syntax/: AST.hs  Internal.hs  Lexer.hs  Parser.hs
modules/core/: chai-mod.toml
src/: constants.hpp  go.mod  go.sum  main.cpp  main.go  util.hpp
src/cmd/: execute.go
src/common/: constants.go  util.go
src/compile/: compiler.cpp  compiler.hpp  import.cpp  initpkg.cpp
src/depm/: depgraph.cpp  depgraph.hpp  import.cpp  loader.cpp  loader.hpp  modpath.cpp  module.hpp  modutil.cpp  package.hpp  srcfile.hpp
src/generate/: generator.go
src/logging/: api.go  chai_error.hpp  display.go  logger.go  message.go
src/mods/: find.go  initialize.go  load.go  module.go
src/parse/: ast.hpp  errors.cpp  parse_common.cpp  parse_prelude.cpp  parser.cpp  parser.hpp
src/report/: chai_error.hpp  display.cpp  message.hpp  position.hpp  reporter.hpp  warn.hpp
src/resolve/: definition.go  resolver.go  symbol_import.go
src/sem/: hir_def.go  hir_expr.go  operator.go  package.go  symbol.go
src/symbols/: symbol.hpp  symbol_table.cpp  symbol_table.hpp
src/syntax/: ast.go  bnf_converter.go  ebnf_grammar.go  ebnf_loader.go  parser.go  parsing_table.go  ptable_gen.go  (+6 more)
tests/: lex_test.chai  scan_test.chai  test.py
(+149 files in other folders)
