cabal-version:      2.4
name:               chai-frontend
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: The frontend and main command-line utility for the Chai compiler

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jordan Gaines
maintainer:         forlornsisu@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable chai-frontend
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        -- Syntactic constructions
        Syntax.Lexer
        Syntax.Parser
        Syntax.AST
        Syntax.Internal

        -- Error reporting
        Report.Message

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        FlexibleInstances
        MultiParamTypeClasses

    build-depends:    
        base ^>=4.15.0.0,
        parsec ^>=3.1.14.0

    hs-source-dirs:   app
    default-language: Haskell2010
